# bot-rewrite

./: ..env.swp  .dockerignore  .env.example  .flake8  .gitignore  .libcst.codemod.yaml  .pyre_configuration  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.migrate  Dockerfile.setup  LICENSE  Pipfile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: autopep8.yml  codeql.yml  flake8.yml  lint.yml  yapf.yml
bridget/: .pyre_configuration.local  __main__.py  bridget.py  migrate.py  setup.py
bridget/backend/: __init__.py  appeal.py  utils.py
bridget/cogs/: __init__.py  antiraid.py  appeals.py  birthday.py  canister.py  chatgpt.py  filters.py  helper.py  ioscfw.py  issues.py  logparsing.py  logs.py  memes.py  misc.py  mod.py  native_actions_listeners.py  pgpkeys.py  restrictions.py  say.py  snipe.py  socialfix.py  stats.py  sync.py  tags.py  timezones.py  unshorten.py  xp.py
bridget/migrate/: __main__.py
bridget/migrate/girmodel/: case.py  filterword.py  giveaway.py  guild.py  tag.py  user.py
bridget/model/: __init__.py  case.py  cases.py  filterimg.py  filterword.py  giveaway.py  guild.py  infraction.py  infractions.py  issues.py  pgpkey.py  tag.py  user.py
bridget/utils/: __init__.py  autocomplete.py  canister.py  config.py  enums.py  errors.py  fetchers.py  menus.py  mod.py  modals.py  pfpcalc.py  report_action.py  reports.py  startup_checks.py  transformers.py  utils.py  views.py
bridget/utils/services/: __init__.py  guild_service.py  user_service.py
cogs/: warns.py
dbs/: warns.db
nickchan/: __main__.py
nickchan/cogs/: chatgpt.py  helper.py  logparsing.py  native_actions_listeners.py  tags.py
nickchan/utils/: enums.py
nickchan/utils/services/: guild_service.py  user_service.py
palera1n_bot/: __main__.py
palera1n_bot/cogs/: native_action_listeners.py  warns.py
palera1n_bot/datamodels/: __init__.py  __main__.py
palera1n_bot/model/: __init__.py  cases.py  user.py
palera1n_bot/utils/: command_groups.py  startup_checks.py
palera1n_bot/utils/checks/: __init__.py  __main__.py  check_invokee.py  check_permissions.py
palera1n_bot/utils/command_groups/: __main__.py
palera1n_bot/utils/database/: __init__.py  __main__.py  cases_helper.py  guild_service.py  user_service.py
