[project]
name = "bridget"
version = "1.0.0"
description = "Bot for the palera1n Discord server"
authors = [
    {name = "Nebula", email = "me@itsnebula.net"},
    {name = "June Park", email = "rjp2030@outlook.com"}
]
dependencies = [
    "mongoengine>=0.27.0",
    "discord-py>=2.2.2",
    "Pillow>=9.5.0",
    "pycryptodome>=3.17",
]
requires-python = ">=3.10,<4.0"
license = {text = "BSD-3-Clause"}
readme = "README.md"

[project.urls]

[tool.pdm.build]
includes = []

[tool.pdm.scripts]
bot.cmd = "python bridget"
bot.env_file = ".env"
setup.cmd = "python bridget/setup.py"
setup.env_file = ".env"

[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
