[project]
name = "bridget"
version = "1.0.0"
description = "Bot for the palera1n Discord server"
authors = [
    {name = "Nebula", email = "me@itsnebula.net"},
    {name = "June Park", email = "rjp2030@outlook.com"},
    {name = "Jan Garcia", email = "me@jancr.dev"},
]
dependencies = [
    "mongoengine>=0.27.0",
    "discord-py @ https://github.com/Rapptz/discord.py/archive/d34a88411d3d973453d80128ab924f6aca197995.zip",
    "Pillow>=9.5.0",
    "chatgpt @ git+https://github.com/0xallie/chatgpt",
    "APScheduler>=3.10.1",
    "emoji-country-flag>=1.3.2",
    "humanize>=4.6.0",
    "autotyping>=23.3.0",
    "aiocache>=0.12.1",
]
requires-python = ">=3.10,<4.0"
license = {text = "BSD-3-Clause"}
readme = "README.md"

[project.urls]

[tool.pdm.build]
includes = []

[tool.pdm.scripts]
bot.cmd = "python bridget"
bot.env_file = ".env"
setup.cmd = "python bridget/setup.py"
setup.env_file = ".env"
lint.cmd = "flake8 --config=.flake8"

[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
experimental-string-processing = true
skip-string-normalization = true
extra = """
    # Add a blank line before a new definition
    def: +2
"""

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
